# Crypto-bot-MEGA

./: README.md  app.py  bot.py  crypto_bot.db  logger.py  main.py  models.py  pyproject.toml
config/: __init__.py  config.py
database/: __init__.py  database.py
handlers/: analysis.py  back.py  callback_handler.py  donate.py  info.py  market.py  sentiment.py  start.py  support.py
services/: bybit_api.py  chart.py  chart_generator.py
static/css/: login.css  main.css  settings.css  style.css  support.css
static/js/: auth.js  charts.js  dashboard.js  login.js  script.js  settings.js  support.js  theme.js
templates/: add_api_key.html  api_keys.html  base.html  index.html  logger.html  login.html  settings.html  support.html
utils/: logger.py
