[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "nest-asyncio>=1.6.0",
    "telegram>=0.0.1",
    "python-telegram-bot>=21.11.1",
    "ccxt>=4.4.67",
    "matplotlib>=3.10.1",
    "psutil>=7.0.0",
    "sqlalchemy>=2.0.39",
    "werkzeug>=3.1.3",
    "cryptography>=44.0.2",
]
